--- a/feature/builtin/capkk/roles/init/init-artifacts/defaults/main.yaml
+++ b/feature/builtin/capkk/roles/init/init-artifacts/defaults/main.yaml
@@ -8,52 +8,52 @@ artifact:
     etcd:
       amd64: >-
         {{- if .kkzone | eq "cn" -}}
-        https://kubernetes-release.pek3b.qingstor.com/etcd/release/download/{{ .etcd_version }}/etcd-{{ .etcd_version }}-linux-amd64.tar.gz
+        https://kubesphere-carryon.top/pkg/etcd/release/download/{{ .etcd_version }}/etcd-{{ .etcd_version }}-linux-amd64.tar.gz
         {{- else -}}
         https://github.com/etcd-io/etcd/releases/download/{{ .etcd_version }}/etcd-{{ .etcd_version }}-linux-amd64.tar.gz
         {{- end -}}
       arm64: >-
         {{- if .kkzone | eq "cn" -}}
-        https://kubernetes-release.pek3b.qingstor.com/etcd/release/download/{{ .etcd_version }}/etcd-{{ .etcd_version }}-linux-arm64.tar.gz
+        https://kubesphere-carryon.top/pkg/etcd/release/download/{{ .etcd_version }}/etcd-{{ .etcd_version }}-linux-arm64.tar.gz
         {{- else -}}
         https://github.com/etcd-io/etcd/releases/download/{{ .etcd_version }}/etcd-{{ .etcd_version }}-linux-arm64.tar.gz
         {{- end -}}
     kubeadm:
       amd64: >-
         {{- if .kkzone | eq "cn" -}}
-        https://kubernetes-release.pek3b.qingstor.com/release/{{ .kube_version }}/bin/linux/amd64/kubeadm
+        https://kubesphere-carryon.top/pkg/release/{{ .kube_version }}/bin/linux/amd64/kubeadm
         {{- else -}}
         https://storage.googleapis.com/kubernetes-release/release/{{ .kube_version }}/bin/linux/amd64/kubeadm
         {{- end -}}
       arm64: >-
         {{- if .kkzone | eq "cn" -}}
-        https://kubernetes-release.pek3b.qingstor.com/release/{{ .kube_version }}/bin/linux/arm64/kubeadm
+        https://kubesphere-carryon.top/pkg/release/{{ .kube_version }}/bin/linux/arm64/kubeadm
         {{- else -}}
         https://storage.googleapis.com/kubernetes-release/release/{{ .kube_version }}/bin/linux/arm64/kubeadm
         {{- end -}}
     kubelet:
       amd64: >-
         {{- if .kkzone | eq "cn" -}}
-        https://kubernetes-release.pek3b.qingstor.com/release/{{ .kube_version }}/bin/linux/amd64/kubelet
+        https://kubesphere-carryon.top/pkg/release/{{ .kube_version }}/bin/linux/amd64/kubelet
         {{- else -}}
         https://storage.googleapis.com/kubernetes-release/release/{{ .kube_version }}/bin/linux/amd64/kubelet
         {{- end -}}
       arm64: >-
         {{- if .kkzone | eq "cn" -}}
-        https://kubernetes-release.pek3b.qingstor.com/release/{{ .kube_version }}/bin/linux/arm64/kubelet
+        https://kubesphere-carryon.top/pkg/release/{{ .kube_version }}/bin/linux/arm64/kubelet
         {{- else -}}
         https://storage.googleapis.com/kubernetes-release/release/{{ .kube_version }}/bin/linux/arm64/kubelet
         {{- end -}}
     kubectl:
       amd64: >-
         {{- if .kkzone | eq "cn" -}}
-        https://kubernetes-release.pek3b.qingstor.com/release/{{ .kube_version }}/bin/linux/amd64/kubectl
+        https://kubesphere-carryon.top/pkg/release/{{ .kube_version }}/bin/linux/amd64/kubectl
         {{- else -}}
         https://storage.googleapis.com/kubernetes-release/release/{{ .kube_version }}/bin/linux/amd64/kubectl
         {{- end -}}
       arm64: >-
         {{- if .kkzone | eq "cn" -}}
-        https://kubernetes-release.pek3b.qingstor.com/release/{{ .kube_version }}/bin/linux/arm64/kubectl
+        https://kubesphere-carryon.top/pkg/release/{{ .kube_version }}/bin/linux/arm64/kubectl
         {{- else -}}
         https://storage.googleapis.com/kubernetes-release/release/{{ .kube_version }}/bin/linux/arm64/kubectl
         {{- end -}}
@@ -86,13 +86,13 @@ artifact:
     crictl:
       amd64: >-
         {{- if .kkzone | eq "cn" -}}
-        https://kubernetes-release.pek3b.qingstor.com/cri-tools/releases/download/{{ .crictl_version }}/crictl-{{ .crictl_version }}-linux-amd64.tar.gz
+        https://kubesphere-carryon.top/pkg/cri-tools/releases/download/{{ .crictl_version }}/crictl-{{ .crictl_version }}-linux-amd64.tar.gz
         {{- else -}}
         https://github.com/kubernetes-sigs/cri-tools/releases/download/{{ .crictl_version }}/crictl-{{ .crictl_version }}-linux-amd64.tar.gz
         {{- end -}}
       arm64: >-
         {{- if .kkzone | eq "cn" -}}
-        https://kubernetes-release.pek3b.qingstor.com/cri-tools/releases/download/{{ .crictl_version }}/crictl-{{ .crictl_version }}-linux-arm64.tar.gz
+        https://kubesphere-carryon.top/pkg/cri-tools/releases/download/{{ .crictl_version }}/crictl-{{ .crictl_version }}-linux-arm64.tar.gz
         {{- else -}}
         https://github.com/kubernetes-sigs/cri-tools/releases/download/{{ .crictl_version }}/crictl-{{ .crictl_version }}-linux-arm64.tar.gz
         {{- end -}}
@@ -112,52 +112,52 @@ artifact:
     cridockerd:
       amd64: >-
         {{- if .kkzone | eq "cn" -}}
-        https://kubernetes-release.pek3b.qingstor.com/releases/download/{{ .cridockerd_version }}/cri-dockerd-{{ .cridockerd_version | default "" | trimPrefix "v" }}.amd64.tgz
+        https://kubesphere-carryon.top/pkg/releases/download/{{ .cridockerd_version }}/cri-dockerd-{{ .cridockerd_version | default "" | trimPrefix "v" }}.amd64.tgz
         {{- else -}}
         https://github.com/Mirantis/cri-dockerd/releases/download/{{ .cridockerd_version }}/cri-dockerd-{{ .cridockerd_version | default "" | trimPrefix "v" }}.amd64.tgz
         {{- end -}}
       arm64: >-
         {{- if .kkzone | eq "cn" -}}
-        https://kubernetes-release.pek3b.qingstor.com/releases/download/{{ .cridockerd_version }}/cri-dockerd-{{ .cridockerd_version | default "" | trimPrefix "v" }}.arm64.tgz
+        https://kubesphere-carryon.top/pkg/releases/download/{{ .cridockerd_version }}/cri-dockerd-{{ .cridockerd_version | default "" | trimPrefix "v" }}.arm64.tgz
         {{- else -}}
         https://github.com/Mirantis/cri-dockerd/releases/download/{{ .cridockerd_version }}/cri-dockerd-{{ .cridockerd_version | default "" | trimPrefix "v" }}.arm64.tgz
         {{- end -}}
     containerd:
       amd64: >-
         {{- if .kkzone | eq "cn" -}}
-        https://kubernetes-release.pek3b.qingstor.com/containerd/containerd/releases/download/{{ .containerd_version }}/containerd-{{ .containerd_version | default "" | trimPrefix "v" }}-linux-amd64.tar.gz
+        https://kubesphere-carryon.top/pkg/containerd/containerd/releases/download/{{ .containerd_version }}/containerd-{{ .containerd_version | default "" | trimPrefix "v" }}-linux-amd64.tar.gz
         {{- else -}}
         https://github.com/containerd/containerd/releases/download/{{ .containerd_version }}/containerd-{{ .containerd_version | default "" | trimPrefix "v" }}-linux-amd64.tar.gz
         {{- end -}}
       arm64: >-
         {{- if .kkzone | eq "cn" -}}
-        https://kubernetes-release.pek3b.qingstor.com/containerd/containerd/releases/download/{{ .containerd_version }}/containerd-{{ .containerd_version | default "" | trimPrefix "v" }}-linux-arm64.tar.gz
+        https://kubesphere-carryon.top/pkg/containerd/containerd/releases/download/{{ .containerd_version }}/containerd-{{ .containerd_version | default "" | trimPrefix "v" }}-linux-arm64.tar.gz
         {{- else -}}
         https://github.com/containerd/containerd/releases/download/{{ .containerd_version }}/containerd-{{ .containerd_version | default "" | trimPrefix "v"  }}-linux-arm64.tar.gz
         {{- end -}}
     runc:
       amd64: >-
         {{- if .kkzone | eq "cn" -}}
-        https://kubernetes-release.pek3b.qingstor.com/opencontainers/runc/releases/download/{{ .runc_version }}/runc.amd64
+        https://kubesphere-carryon.top/pkg/opencontainers/runc/releases/download/{{ .runc_version }}/runc.amd64
         {{- else -}}
         https://github.com/opencontainers/runc/releases/download/{{ .runc_version }}/runc.amd64
         {{- end -}}
       arm64: >-
         {{- if .kkzone | eq "cn" -}}
-        https://kubernetes-release.pek3b.qingstor.com/opencontainers/runc/releases/download/{{ .runc_version }}/runc.arm64
+        https://kubesphere-carryon.top/pkg/opencontainers/runc/releases/download/{{ .runc_version }}/runc.arm64
         {{- else -}}
         https://github.com/opencontainers/runc/releases/download/{{ .runc_version }}/runc.arm64
         {{- end -}}
     dockercompose:
       amd64: >-
         {{- if .kkzone | eq "cn" -}}
-        https://kubernetes-release.pek3b.qingstor.com/docker/compose/releases/download/{{ .dockercompose_version }}/docker-compose-linux-x86_64
+        https://kubesphere-carryon.top/pkg/docker/compose/releases/download/{{ .dockercompose_version }}/docker-compose-linux-x86_64
         {{- else -}}
         https://github.com/docker/compose/releases/download/{{ .dockercompose_version }}/docker-compose-linux-x86_64
         {{- end -}}
       arm64: >-
         {{- if .kkzone | eq "cn" -}}
-        https://kubernetes-release.pek3b.qingstor.com/docker/compose/releases/download/{{ .dockercompose_version }}/docker-compose-linux-aarch64
+        https://kubesphere-carryon.top/pkg/docker/compose/releases/download/{{ .dockercompose_version }}/docker-compose-linux-aarch64
         {{- else -}}
         https://github.com/docker/compose/releases/download/{{ .dockercompose_version }}/docker-compose-linux-aarch64
         {{- end -}}
@@ -166,13 +166,13 @@ artifact:
     calicoctl:
       amd64: >-
         {{- if .kkzone | eq "cn" -}}
-        https://kubernetes-release.pek3b.qingstor.com/projectcalico/calico/releases/download/{{ .calico_version }}/calicoctl-linux-amd64
+        https://kubesphere-carryon.top/pkg/projectcalico/calico/releases/download/{{ .calico_version }}/calicoctl-linux-amd64
         {{- else -}}
         https://github.com/projectcalico/calico/releases/download/{{ .calico_version }}/calicoctl-linux-amd64
         {{- end -}}
       arm64: >-
         {{- if .kkzone | eq "cn" -}}
-        https://kubernetes-release.pek3b.qingstor.com/projectcalico/calico/releases/download/{{ .calico_version }}/calicoctl-linux-arm64
+        https://kubesphere-carryon.top/pkg/projectcalico/calico/releases/download/{{ .calico_version }}/calicoctl-linux-arm64
         {{- else -}}
         https://github.com/projectcalico/calico/releases/download/{{ .calico_version }}/calicoctl-linux-arm64
         {{- end -}}
