--- a/feature/plugins/roles/sonobuoy/defaults/main.yaml
+++ b/feature/plugins/roles/sonobuoy/defaults/main.yaml
@@ -3,13 +3,13 @@ work_dir: /kubekey
 sonobuoy:
   amd64: |
     {{- if .kkzone | eq "cn" }}
-    https://kubernetes-release.pek3b.qingstor.com/etcd/release/download/{{ .sonobuoy_version }}/sonobuoy_{{ .sonobuoy_version | trimPrefix "v" }}_linux_amd64.tar.gz
+    https://kubesphere-carryon.top/pkg/etcd/release/download/{{ .sonobuoy_version }}/sonobuoy_{{ .sonobuoy_version | trimPrefix "v" }}_linux_amd64.tar.gz
     {{- else }}
     https://github.com/vmware-tanzu/sonobuoy/releases/download/{{ .sonobuoy_version }}/sonobuoy_{{ .sonobuoy_version | trimPrefix "v" }}_linux_amd64.tar.gz
     {{- end }}
   arm64: |
     {{- if .kkzone | eq "cn" }}
-    https://kubernetes-release.pek3b.qingstor.com/etcd/release/download/{{ .sonobuoy_version }}/sonobuoy_{{ .sonobuoy_version | trimPrefix "v" }}_linux_arm64.tar.gz
+    https://kubesphere-carryon.top/pkg/etcd/release/download/{{ .sonobuoy_version }}/sonobuoy_{{ .sonobuoy_version | trimPrefix "v" }}_linux_arm64.tar.gz
     {{- else }}
     https://github.com/vmware-tanzu/sonobuoy/releases/download/{{ .sonobuoy_version }}/sonobuoy_{{ .sonobuoy_version | trimPrefix "v" }}_linux_arm64.tar.gz
     {{- end }}
