--- a/.github/workflows/kubernetes-auto-support.yaml
+++ b/.github/workflows/kubernetes-auto-support.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
   update-kubernetes-version:
     runs-on: ubuntu-latest
-    if: github.repository == 'kubesphere/kubekey'
+    if: github.repository == 'kubesphere-carryon/kubekey'
     steps:
       - uses: actions/checkout@v4
 
