--- a/feature/builtin/core/roles/install/cni/defaults/main.yaml
+++ b/feature/builtin/core/roles/install/cni/defaults/main.yaml
@@ -8,7 +8,7 @@ cni:
     image: 
       registry:  >-
         {{ .dockerio_registry }}
-      repository: kubesphere/multus-cni
+      repository: kubesphereon/multus-cni
       tag: v3.8
   # In Kubernetes, the Pod CIDR supports both IPv4 and IPv6 configurations. It can be specified as follows:
   # "Single-stack IPv4": the pod_cidr value format "ipv4"
