--- a/.github/workflows/build-multiarch.yaml
+++ b/.github/workflows/build-multiarch.yaml
@@ -36,7 +36,17 @@ jobs:
         run: |
           echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           make release-prod
-      
+          
+      - name: Chose Registry by tag
+        id: chose_registry
+        run: |
+          if [[ ${GITHUB_REF#refs/*/} =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+              echo "env=prod" >> "$GITHUB_OUTPUT"
+          else
+              echo "env=dev" >> "$GITHUB_OUTPUT"
+          fi
+          echo "tag=${GITHUB_REF#refs/*/}" >> "$GITHUB_OUTPUT"
+
       - name: Login to ALIYUN
         uses: docker/login-action@v3
         with:
